--- a/quemSomos.html
+++ b/quemSomos.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <div id="button-01">
-            <a href="#"><button>Quem Somos</Button></a>
+            <a href="quemSomos.html" target="_self"><button>Quem Somos</button></a>
             </div>
             <div id="button-02">
                 <a href="servico.html" target="_self"><button>Serviços</Button></a>
