--- a/servico.html
+++ b/servico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços</title>
+    <title>MMTurismo/serviços</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <div id="button-01">
-            <a href="quemSomos.html" target="_blank"><button>Quem Somos</Button></a>
+            <a href="quemSomos.html" target="_self"><button>Quem Somos</Button></a>
             </div>
             <div id="button-02">
                 <a href="servico.html" target="_self"><button>Serviços</Button></a>
